Tela de setores quase pronta

--- a/views/events/event.ejs
+++ b/views/events/event.ejs
@@ -37,12 +37,14 @@
                     <!-- Ingresso 1 -->
                     <div class="col-md-4 mb-4">
                         <div class="card">
-                            <img src="/images/oliviaRodrigo.gif" class="card-img-top" alt="Imagem do evento">
+                            <a href="olivia-rodrigo/ingressos">
+                                <img src="/images/oliviaRodrigo.gif" class="card-img-top" alt="Imagem do evento">
+                            </a>
                             <div class="card-body">
                                 <h5 class="card-title">Curitiba - Paraná</h5>
                                 <p class="card-text">Estádio Couto Pereira</p>
                                 <p class="card-text">Quarta-feira, 26 de março de 2025</p>
-                                <a href="" class="btn btn-primary">Comprar Ingressos</a>
+                                <a href="olivia-rodrigo/ingressos" class="btn btn-primary">Comprar Ingressos</a>
                             </div>
                         </div>
                     </div>
