--- a/views/components/header.ejs
+++ b/views/components/header.ejs
@@ -13,19 +13,19 @@
             <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" href="meus-pedidos">Meus pedidos</a>
+                        <a class="nav-link" href="/meus-pedidos">Meus pedidos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="meu-perfil">Meu perfil</a>
+                        <a class="nav-link" href="/meu-perfil">Meu perfil</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="suporte">Suporte ao Fã</a>
+                        <a class="nav-link" href="/suporte">Suporte ao Fã</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="cadastrar">Cadastre-se</a>
+                        <a class="nav-link" href="/cadastrar">Cadastre-se</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="entrar">Entrar</a>
+                        <a class="nav-link" href="/entrar">Entrar</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Sair</a>
