--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -1,5 +1,5 @@
 @import url('https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css');
-@import url(../style.css);
+@import url(./style.css);
 
 /*---------------------------------*/
 /* Estilização do banner slideshow */
