--- a/views/components/header.ejs
+++ b/views/components/header.ejs
@@ -12,23 +12,23 @@
             </a>
             <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
+                    <li class="nav-item" id="orders" style="display: none;">
                         <a class="nav-link" href="/meus-pedidos">Meus pedidos</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item" id="profile" style="display: none;">
                         <a class="nav-link" href="/meu-perfil">Meu perfil</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item" id="support" style="display: none;">
                         <a class="nav-link" href="/suporte">Suporte ao Fã</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item" id="register" style="display: none;">
                         <a class="nav-link" href="/cadastrar">Cadastre-se</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item" id="login" style="display: none;">
                         <a class="nav-link" href="/entrar">Entrar</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Sair</a>
+                    <li class="nav-item" id="logout" style="display: none;">
+                        <a class="nav-link" href="/sair">Sair</a>
                     </li>
                 </ul>
             </div>
