--- a/public/stylesheets/profile.css
+++ b/public/stylesheets/profile.css
@@ -111,7 +111,7 @@ input:disabled {
     margin-bottom: 5px;
 }
 
-.btn {
+.btn-primary {
     background-color: #5f1571;
     border-color: #3e0f60; 
     font-size: 18px;
@@ -124,7 +124,7 @@ input:disabled {
     margin: 15px auto 5px auto;
 }
 
-.btn:hover, .btn:active {
+.btn-primary:hover, .btn-primary:active {
     background-color: #721e86 !important;
 }
 
@@ -139,4 +139,99 @@ form h2 {
 
 #password-section {
     display: none;
+}
+
+.progress-container {
+    align-items: center;
+    gap: 10px;
+    display: none;
+}
+
+.progress {
+    width: 40%;
+    height: 10px;
+    border-radius: 10px;
+}
+
+.progress-bar {
+    border-radius: 10px;
+    transition: width 0.3s ease;
+}
+
+.strength-message {
+    font-weight: bold;
+}
+
+.progress-bar-danger {
+    background-color: #711e8683;
+}
+
+.progress-bar-warning {
+    background-color: #711e86c2;
+}
+
+.progress-bar-success {
+    background-color: #721e86;
+}
+
+.text-danger {
+    color: #711e8683 !important;
+}
+
+.text-warning {
+    color: #711e86c2 !important;
+}
+
+.text-success {
+    color: #721e86 !important;
+}
+
+.password-container {
+    position: relative;
+    display: block;
+}
+
+#toggle-password-1, #toggle-password-2, #toggle-password-3 {
+    position: absolute;
+    right: 3px;
+    top: 29px;
+    transform: translateY(-50%);
+    background: none;
+    border: none;
+    font-size: 24px;
+    cursor: pointer;
+    color: #555;
+}
+
+#toggle-password-1 ion-icon,
+#toggle-password-2 ion-icon,
+#toggle-password-3 ion-icon {
+    font-size: 24px;
+    color: #555;
+}
+
+.form-control.is-invalid ~ #toggle-password-1 {
+    right: 25px;
+}
+
+.form-control.is-invalid ~ #toggle-password-2 {
+    right: 25px;
+}
+
+.form-control.is-invalid ~ #toggle-password-3 {
+    right: 25px;
+}
+
+.info-icon {
+    font-size: 1.5rem;
+    color: #555;
+    cursor: pointer;
+    margin-left: 5px;
+    vertical-align: middle;
+}
+
+.tooltip-custom {
+    text-align: left;
+    font-family: 'JetBrains Mono';
+    padding: 2px;
 }
