--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -8,6 +8,10 @@
         <link href="/stylesheets/profile.css" rel="stylesheet">
         
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous" defer></script>
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js"></script>
+        <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+        <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
         <script src="/javascripts/components/header.js" defer></script>
         <script src="/javascripts/profile.js" defer></script>
         <script src="/javascripts/icon.js" defer></script>
@@ -52,31 +56,34 @@
             <div class="content-info" id="content-area">
                 <!-- Informações Pessoais -->
                 <div id="info-section">
-                    <form class="row g-3">
+                    <form action="meu-perfil" method="POST" class="row g-3 needs-validation" novalidate>
                         <h2>Informações Pessoais</h2>
                         <div class="col-md-12">
                             <label for="name" class="form-label">Nome completo</label>
-                            <input type="text" class="form-control" id="name" required>
+                            <input type="text" class="form-control <%= error?.name ? 'is-invalid' : '' %>" id="name" name="name" value="<%= user?.name || '' %>" required>
+                            <div class="invalid-feedback"><%= error?.name || '' %><!-- A mensagem de erro será alterada dinamicamente aqui --></div>
                         </div>
                         <div class="col-md-12">
-                            <label for="userName" class="form-label">Usuário</label>
-                            <input type="text" class="form-control" id="userName" required>
+                            <label for="user" class="form-label">Usuário</label>
+                            <input type="text" class="form-control <%= error?.user ? 'is-invalid' : '' %>" id="user" name="user" value="<%= user?.user || '' %>" required>
+                            <div class="invalid-feedback"><%= error?.user || '' %><!-- A mensagem de erro será alterada dinamicamente aqui --></div>
                         </div>
                         <div class="col-md-12">
                             <label for="email" class="form-label">E-mail</label>
-                            <input type="email" class="form-control" id="email" disabled required>
+                            <input type="email" class="form-control" id="email" value="<%= user?.email || '' %>" disabled required>
                         </div>
                         <div class="col-md-6">
                             <label for="cpf" class="form-label">CPF</label>
-                            <input type="text" class="form-control" id="cpf" disabled required>
+                            <input type="text" class="form-control" id="cpf" value="<%= user?.cpf || '' %>" disabled required>
                         </div>
                         <div class="col-md-6">
                             <label for="birthDate" class="form-label">Data de nascimento</label>
-                            <input type="date" class="form-control" id="birthDate" disabled required>
+                            <input type="date" class="form-control" id="birthDate" value="<%= user?.birthDate || '' %>" disabled required>
                         </div>
                         <div class="col-md-12">
-                            <label for="phone" class="form-label">Celular</label>
-                            <input type="text" class="form-control" id="phone" required>
+                            <label for="cellphone" class="form-label">Celular</label>
+                            <input type="text" class="form-control <%= error?.cellphone ? 'is-invalid' : '' %>" id="cellphone" name="cellphone" value="<%= user?.cellphone || '' %>" required>
+                            <div class="invalid-feedback"><%= error?.cellphone || '' %><!-- A mensagem de erro será alterada dinamicamente aqui --></div>
                         </div>
                         <button type="submit" class="btn btn-primary">Salvar alterações</button>
                     </form>
@@ -84,19 +91,56 @@
 
                 <!-- Senha -->
                 <div class="password" id="password-section">
-                    <form class="row g-3">
+                    <form action="meu-perfil" method="POST" class="row g-3 needs-validation" novalidate>
                         <h2>Alterar Senha</h2>
                         <div class="col-md-12">
-                            <label for="old-password" class="form-label">Senha antiga</label>
-                            <input type="password" class="form-control" id="old-password" required>
+                            <label for="oldPassword" class="form-labe text-start d-blockl">Senha antiga</label>
+                            <div class="password-container">
+                                <input type="password" class="form-control <%= error?.oldPassword ? 'is-invalid' : '' %>" id="oldPassword" name="oldPassword" value="<%= user?.oldPassword || '' %>" placeholder="********" required>
+                                <div class="invalid-feedback"><%= error?.oldPassword || '' %><!-- A mensagem de erro será alterada dinamicamente aqui --></div>
+                                <button type="button" id="toggle-password-1" class="btn btn-secondary">
+                                    <ion-icon name="eye-off"></ion-icon>
+                                </button>
+                            </div>
                         </div>
                         <div class="col-md-12">
-                            <label for="new-password" class="form-label">Nova senha</label>
-                            <input type="password" class="form-control" id="new-password" required>
+                            <label for="password" class="form-label text-start d-block">Nova senha</label>
+                            <div class="password-container">
+                                <input type="password" class="form-control <%= error?.password ? 'is-invalid' : '' %>" id="password" name="password" value="<%= user?.password || '' %>" placeholder="********" required>
+                                <div class="invalid-feedback"><%= error?.password || '' %><!-- A mensagem de erro será alterada dinamicamente aqui --></div>
+                                <button type="button" id="toggle-password-2" class="btn btn-secondary">
+                                    <ion-icon name="eye-off"></ion-icon>
+                                </button>
+                            </div>
+                            <div class="progress-container">
+                                <div class="progress">
+                                    <div id="password-strength-meter" class="progress-bar" role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+                                </div>
+                                <div id="password-strength-msg" class="strength-message"></div>
+                                <ion-icon name="information-circle-outline" class="info-icon" data-bs-toggle="tooltip" data-bs-html="true" data-bs-placement="right"
+                                    title="<div class='tooltip-custom'>
+                                                A senha deve conter:
+                                                <br><br>
+                                                <ul style='margin: 0; padding-left: 20px;'>
+                                                    <li>Pelo menos 8 caracteres</li>
+                                                    <li>Uma letra maiúscula</li>
+                                                    <li>Uma letra minúscula</li>
+                                                    <li>Um número</li>
+                                                    <li>Um caractere especial</li>
+                                                </ul>
+                                            </div>">
+                                </ion-icon>
+                            </div>
                         </div>
                         <div class="col-md-12">
-                            <label for="confirm-password" class="form-label">Confirme sua senha</label>
-                            <input type="password" class="form-control" id="confirm-password" required>
+                            <label for="checkPassword" class="form-label">Confirme sua senha</label>
+                            <div class="password-container">
+                                <input type="password" class="form-control <%= error?.checkPassword ? 'is-invalid' : '' %>" id="checkPassword" name="checkPassword" value="<%= user?.checkPassword || '' %>" placeholder="********" required>
+                                <div class="invalid-feedback"><%= error?.checkPassword || '' %><!-- A mensagem de erro será alterada dinamicamente aqui --></div>
+                                <button type="button" id="toggle-password-3" class="btn btn-secondary">
+                                    <ion-icon name="eye-off"></ion-icon>
+                                </button>
+                            </div>
                         </div>
                         <button type="submit" class="btn btn-primary">Salvar nova senha</button>
                     </form>
