--- a/views/events/ticket.ejs
+++ b/views/events/ticket.ejs
@@ -115,7 +115,9 @@
                                 <div class="total-display">
                                     <p id="total-price" class="fw-bold">Total: R$ 0,00</p>
                                 </div>
-                                <button class="btn btn-primary checkout-btn">Continuar</button>
+                                <a href="ingressos/confirmacao" class="text-decoration-none">
+                                    <button class="btn btn-primary checkout-btn">Continuar</button>
+                                </a>
                             </div>
                         </div>
                     </div>
