Tela de Setores pronta

--- a/views/events/ticket.ejs
+++ b/views/events/ticket.ejs
@@ -115,9 +115,7 @@
                                 <div class="total-display">
                                     <p id="total-price" class="fw-bold">Total: R$ 0,00</p>
                                 </div>
-                                <a href="ingressos/confirmacao" class="text-decoration-none">
-                                    <button class="btn btn-primary checkout-btn">Continuar</button>
-                                </a>
+                                <a href="ingressos/confirmacao" class="btn btn-primary checkout-btn">Continuar</a>
                             </div>
                         </div>
                     </div>
