Criando mapeamento dinâmico das páginas

--- a/views/events/event.ejs
+++ b/views/events/event.ejs
@@ -23,7 +23,7 @@
         <div class="content flex-grow-1" id="content">
             <!-- Imagem do evento -->
             <div class="event-img">
-                <img src="/images/oliviaRodrigo.gif" alt="Banner do evento">
+                <img src="<%= event.image %>" alt="Banner do evento">
             </div>
 
             <nav class="event-nav text-center">
@@ -35,19 +35,21 @@
             <section class="tickets" id="ticket-section" class="container mt-5">
                 <div class="row">
                     <!-- Ingresso 1 -->
-                    <div class="col-md-4 mb-4">
-                        <div class="card">
-                            <a href="olivia-rodrigo/ingressos">
-                                <img src="/images/oliviaRodrigo.gif" class="card-img-top" alt="Imagem do evento">
-                            </a>
-                            <div class="card-body">
-                                <h5 class="card-title">Curitiba - Paraná</h5>
-                                <p class="card-text">Estádio Couto Pereira</p>
-                                <p class="card-text">Quarta-feira, 26 de março de 2025</p>
-                                <a href="olivia-rodrigo/ingressos" class="btn btn-primary">Comprar Ingressos</a>
+                    <% event.dates.forEach(date => { %>
+                        <div class="col-md-4 mb-4">
+                            <div class="card">
+                                <a href="<%= date.link %>">
+                                    <img src="<%= event.image %>" class="card-img-top" alt="Imagem do evento">
+                                </a>
+                                <div class="card-body">
+                                    <h5 class="card-title"><%= date.city %> - <%= date.state %></h5>
+                                    <p class="card-text"><%= date.locale %></p>
+                                    <p class="card-text"><%= date.date %></p>
+                                    <a href="<%= date.link %>" class="btn btn-primary">Comprar Ingressos</a>
+                                </div>
                             </div>
                         </div>
-                    </div>
+                    <% }); %>
                 </div>
             </section>
 
@@ -55,53 +57,15 @@
             <section id="info-section" class="container mt-3 mb-5">
                 <div class="info">
                     <h2 class="info-title mb-4">Informações gerais</h2>
-                    <p>
-                        Prepare-se para uma experiência única e emocionante! A aguardada GUTS World Tour, de Olivia Rodrigo, finalmente marcará a estreia da artista no Brasil, trazendo apresentações imperdíveis em Curitiba, São Paulo e Rio de Janeiro. Reconhecida como uma das artistas mais talentosas e influentes da nova geração, Olivia promete encantar o público brasileiro com performances cheias de energia, emoção e, claro, seus sucessos icônicos.
-                    </p>
-                    <p>
-                        A GUTS World Tour celebra o segundo álbum de estúdio de Olivia Rodrigo, intitulado GUTS, que estreou no topo das paradas globais e consolidou ainda mais seu nome na música pop. Com letras sinceras, melodias cativantes e uma presença de palco arrebatadora, Olivia levará seus fãs em uma jornada musical inesquecível, apresentando desde hits como "Vampire" e "Bad Idea Right?" até faixas amadas de seu álbum de estreia, SOUR, incluindo "Drivers License" e "Good 4 U".
-                    </p>
+                    <p><%- event.infos %></p>
                     <h2 class="info-title mb-4 mt-5">Classificação indicativa</h2>
-                    <p>
-                        A classificação para os shows é de 16 anos. No entanto, fãs entre 5 e 15 anos poderão comparecer, desde que acompanhados por seus pais ou responsáveis legais. Essa é a oportunidade perfeita para famílias e amigos curtirem juntos uma noite cheia de música e emoção.
-                    </p>
+                    <p><%- event.classification %></p>
                     <h2 class="info-title mb-4 mt-5">Venda de ingressos</h2>
-                    <p>
-                        A "GUTS World Tour" é a segunda turnê da cantora e compositora americana Olivia Rodrigo, promovendo seu segundo álbum de estúdio, "Guts" (2023). A turnê teve início em 23 de fevereiro de 2024, em Palm Desert, Estados Unidos, e está programada para concluir em 1º de julho de 2025, em Manchester, Inglaterra, totalizando 101 shows em diversas partes do mundo, incluindo América do Norte, Europa, Ásia, Oceania e Brasil. 
-                        Em 26 de março de 2025, Olivia Rodrigo realizará seu primeiro show no Brasil, no Estádio Couto Pereira, em Curitiba, Paraná. A apresentação contará com a participação especial da artista St. Vincent. Os portões serão abertos às 16h, e o show está programado para começar às 21h30. A classificação etária é de 16 anos; menores de 5 a 15 anos devem estar acompanhados dos pais ou responsáveis legais.
-                    </p>
-                    <p>
-                        Os ingressos estão disponíveis em diferentes setores e categorias:
-                        <ul>
-                            <li><strong class="d-block mb-3 m">Pista:</strong>
-                                <ul class="mb-4">
-                                    <li>Inteira: R$ 950</li>
-                                    <li>Meia-entrada: R$ 475</li>
-                                    <li>Meia-entrada idoso: R$ 475</li>
-                                    <li>Meia-entrada PCD: R$ 475</li>
-                                </ul>
-                            </li>
-                            <li><strong class="d-block mb-3 m">Cadeira Inferior:</strong>
-                                <ul class="mb-4">
-                                    <li>Inteira: R$ 660</li>
-                                    <li>Meia-entrada: R$ 330</li>
-                                    <li>Meia-entrada idoso: R$ 330</li>
-                                    <li>Meia-entrada PCD: R$ 330</li>
-                                </ul>
-                            </li>
-                            <li><strong class="d-block mb-3 m">Cadeira Superior:</strong>
-                                <ul class="mb-4">
-                                    <li>Inteira: R$ 550</li>
-                                    <li>Meia-entrada: R$ 275</li>
-                                    <li>Meia-entrada idoso: R$ 275</li>
-                                    <li>Meia-entrada PCD: R$ 275</li>
-                                </ul>
-                            </li>
-                        </ul>
-                    </p>
-
+                    <p><%- event.ticketSell %></p>
+                    <h2 class="info-title mb-4 mt-5">Setores e valores</h2>
+                    <p><%- event.ticketPrice %></p>
                     <div class="img-sector d-flex justify-content-center">
-                        <img src="/images/setoresOlivia.png" alt="Setores do evento">
+                        <img src="<%= event.sectorImage %>" alt="Setores do evento">
                     </div>
             </div>
             </section>
