--- a/views/events/ticket.ejs
+++ b/views/events/ticket.ejs
@@ -10,6 +10,7 @@
         <script src="/javascripts/components/header.js" defer></script>
         <script src="/javascripts/icon.js" defer></script>
         <script src="/javascripts/events/ticket.js" defer></script>
+        <script>const sectorPrices = <%- JSON.stringify(date.sectors) %>;</script>
 
         <link rel="icon" href="/images/logo-light.svg" type="image/svg+xml">
         <title>ShowPass</title>
@@ -26,7 +27,7 @@
                 <div class="row">
                     <!-- Mapa do evento -->
                     <div class="col-md-8 map-container">
-                        <img src="/images/setoresOlivia.png" alt="Mapa do evento">
+                        <img src="<%= date.sectorImage %>" alt="Mapa do evento">
                     </div>
         
                     <div class="col-md-4 p-4">
@@ -34,27 +35,23 @@
                         <div id="sector-list" class="ticket-section">
                             <h4 class="mb-4">Selecione um setor</h4>
                             <ul class="list-group">
-                                <li class="list-group-item" onclick="showTickets(this)">
-                                    <div class="info">
-                                        <strong>Pista</strong><br>
-                                        <span>A partir de R$ 475,00</span>
-                                    </div>
-                                    <span class="arrow">></span>
-                                </li>
-                                <li class="list-group-item" onclick="showTickets(this)">
-                                    <div class="info">
-                                        <strong>Cadeira Inferior</strong><br>
-                                        <span>A partir de R$ 330,00</span>
-                                    </div>
-                                    <span class="arrow">></span>
-                                </li>
-                                <li class="list-group-item" onclick="showTickets(this)">
-                                    <div class="info">
-                                        <strong>Cadeira Superior</strong><br>
-                                        <span>A partir de R$ 275,00</span>
-                                    </div>
-                                    <span class="arrow">></span>
-                                </li>
+                                <% Object.keys(date.sectors).forEach(sector => { %>
+                                    <%
+                                        const categories = date.sectors[sector];
+                                        let minPrice = Infinity;
+                                        Object.keys(categories).forEach(category => {
+                                            const ticket = categories[category];
+                                            minPrice = Math.min(minPrice, ticket.value);
+                                        });
+                                    %>
+                                    <li class="list-group-item" onclick="showTickets(this)">
+                                        <div class="info">
+                                            <strong><%= sector %></strong><br>
+                                            <span>A partir de R$ <%= minPrice.toFixed(2) %></span>
+                                        </div>
+                                        <span class="arrow">></span>
+                                    </li>
+                                <% }); %>
                             </ul>
                         </div>
         
@@ -64,58 +61,15 @@
                                 &larr; 
                                 <h4 id="selected-sector" class="mb-4"></h4> 
                             </button>
-                            <ul class="list-group">
-                                <li class="list-group-item">
-                                    <div class="info">
-                                        <strong>Inteira</strong>
-                                        <span class="price">R$ 950,00</span>
-                                    </div>
-                                    <div class="quantity-selector">
-                                        <button class="btn btn-minus" onclick="changeQuantity(this, -1)">-</button>
-                                        <span class="quantity-display" data-price="950">0</span>
-                                        <button class="btn btn-plus" onclick="changeQuantity(this, 1)">+</button>
-                                    </div>
-                                </li>
-                                <li class="list-group-item">
-                                    <div class="info">
-                                        <strong>Meia-Entrada</strong>
-                                        <span class="price">R$ 475,00</span>
-                                    </div>
-                                    <div class="quantity-selector">
-                                        <button class="btn btn-minus" onclick="changeQuantity(this, -1)">-</button>
-                                        <span class="quantity-display" data-price="475">0</span>
-                                        <button class="btn btn-plus" onclick="changeQuantity(this, 1)">+</button>
-                                    </div>
-                                </li>
-                                <li class="list-group-item">
-                                    <div class="info">
-                                        <strong>Meia-Entrada Idoso</strong>
-                                        <span class="price">R$ 475,00</span>
-                                    </div>
-                                    <div class="quantity-selector">
-                                        <button class="btn btn-minus" onclick="changeQuantity(this, -1)">-</button>
-                                        <span class="quantity-display" data-price="475">0</span>
-                                        <button class="btn btn-plus" onclick="changeQuantity(this, 1)">+</button>
-                                    </div>
-                                </li>
-                                <li class="list-group-item">
-                                    <div class="info">
-                                        <strong>Meia-Entrada PCD</strong>
-                                        <span class="price">R$ 475,00</span>
-                                    </div>
-                                    <div class="quantity-selector">
-                                        <button class="btn btn-minus" onclick="changeQuantity(this, -1)">-</button>
-                                        <span class="quantity-display" data-price="475">0</span>
-                                        <button class="btn btn-plus" onclick="changeQuantity(this, 1)">+</button>
-                                    </div>
-                                </li>
+                            <ul class="list-group" id="ticket-items">
+                                <!-- Itens de ingressos serão inseridos aqui pelo JS -->
                             </ul>
 
                             <div id="checkout-section" class="checkout-container d-none mt-4">
                                 <div class="total-display">
                                     <p id="total-price" class="fw-bold">Total: R$ 0,00</p>
                                 </div>
-                                <a href="ingressos/confirmacao" class="btn btn-primary checkout-btn">Continuar</a>
+                                <a href="data-<%= index %>/confirmacao" class="btn btn-primary checkout-btn">Continuar</a>
                             </div>
                         </div>
                     </div>
