--- a/public/stylesheets/support.css
+++ b/public/stylesheets/support.css
@@ -7,7 +7,8 @@
     align-items: center;
     justify-content: center;
     width: 100%;
-    height: 360px;
+    min-height: 360px;
+    padding: 20px;
     background-color: #111;
     background-image: linear-gradient(45deg, rgba(3, 3, 3, 0.304) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.05) 50%, rgba(3, 3, 3, 0.304) 75%, transparent 75%, transparent);
     color: white;
@@ -171,4 +172,8 @@
     font-size: 1.2rem;
     font-weight: 600;
     color: #393838;
+}
+
+.invalid-feedback {
+    color: #fc8c73;
 }
