tela de pagamento pronta

--- a/views/events/confirmation.ejs
+++ b/views/events/confirmation.ejs
@@ -40,7 +40,7 @@
                     <h5 class="total-container">Total: <span id="total-price">R$ 900,00</span></h5>
                     
                     <div class="mt-3">
-                        <a href="/" class="btn btn-primary">Confirmar a Reserva</a>
+                        <a href="confirmacao/pagamento" class="btn btn-primary">Confirmar a Reserva</a>
                     </div>
                 </div>
             </div>
