--- a/public/stylesheets/events/payment.css
+++ b/public/stylesheets/events/payment.css
@@ -1,2 +1,112 @@
 @import url('https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css');
 @import url(../style.css);
+
+.card-container {
+    width: 60%;
+    margin: 0 auto;
+}
+
+h1 {
+    font-size: 1.9rem;
+}
+
+h5 {
+    font-size: 1.3rem;
+}
+
+a {
+    color: black;
+}
+
+#qr-code {
+    height: 280px;
+    width: auto;
+}
+
+.payment-card {
+    cursor: pointer;
+    margin-bottom: 40px;
+    margin-top: 40px;
+    border: 1px solid #ddd;
+    border-radius: 10px;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1); 
+}
+
+.payment-card:hover {
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.form-input {
+    display: none;
+    width: 95%;
+    margin-top: 15px;
+    margin-left: 20px;
+}
+
+.form-control, .form-select {
+    height: 50px; 
+    font-size: 16px; 
+    padding: 10px;
+    border-radius: 10px;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.form-control::placeholder {
+    color: #adabab;
+}
+
+.form-label {
+    color: #555;
+}
+
+.rotate-icon {
+    transition: transform 0.3s;
+}
+
+.rotate-icon.open {
+    transform: rotate(180deg);
+}
+
+.btn-success {
+    background-color: #5f1571; 
+    border: none;
+    color: white;
+    padding: 10px 20px; 
+    font-size: 1.2rem;
+    font-weight: 500;
+    border-radius: 5px;
+    text-transform: uppercase;
+    margin-bottom: 20px;
+    align-self: flex-start;
+    transition: background-color 0.3s ease;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.329);
+    position: relative;
+    z-index: 2;
+    display: block;
+    width: 60%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.btn-success:hover, .btn-success:active {
+    background-color: #6a1a7d !important;
+}
+
+.qr-code-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 20px;
+}
+
+.qr-code-container img {
+    width: 150px;
+    height: 150px;
+    margin-bottom: 10px;
+}
+
+.qr-expiry {
+    font-size: 14px;
+    color: #555;
+    margin-bottom: 15px;
+}
