--- a/views/events/payment.ejs
+++ b/views/events/payment.ejs
@@ -7,8 +7,10 @@
         <link href="/stylesheets/events/payment.css" rel="stylesheet">
         
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous" defer></script>
+        <script src="https://unpkg.com/imask" defer></script>
         <script src="/javascripts/components/header.js" defer></script>
         <script src="/javascripts/icon.js" defer></script>
+        <script src="/javascripts/events/payment.js" defer></script>
 
         <link rel="icon" href="/images/logo-light.svg" type="image/svg+xml">
         <title>ShowPass</title>
@@ -21,6 +23,78 @@
 
         <!-- Conteúdo da página -->
         <div class="content flex-grow-1" id="content">
+            <div class="container mt-5">
+                <h1 class="text-center mb-4">Selecione a forma de pagamento</h1>
+                <div class="card-container">
+                    <!-- Card para Pix -->
+                    <div class="card payment-card">
+                        <div class="card-body d-flex justify-content-between align-items-center">
+                            <h5 class="card-title mb-0">Pix</h5>
+                            <span class="rotate-icon" id="arrow">&#x25BC;</span>
+                        </div>
+                        <div class="form-input text-center" id="pix-section">
+                            <div class="qr-code-container">
+                                <img id="qr-code" alt="QR Code" src="/images/qrCode.png">
+                                <p class="qr-expiry text-center">
+                                    Válido até 
+                                    <span id="qr-expiry-time">--:--</span>
+                                    <strong><br><br>1. Abra o aplicativo do seu banco no celular</strong>
+                                    <strong><br>2. Clique na área Pix e escaneie o Qr-Code acima</strong>
+                                    <strong><br>3. Realize o pagamento e, em seguida, clique no botão abaixo</strong>
+                                </p>
+                                <button class="btn btn-success mt-2">Já paguei</button>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Card para Cartão -->
+                    <div class="card payment-card" id="credit-card">
+                        <div class="card-body d-flex justify-content-between align-items-center">
+                            <h5 class="card-title mb-0">Cartão de crédito/débito</h5>
+                            <span class="rotate-icon" id="arrow">&#x25BC;</span>
+                        </div>
+                        <div class="form-input">
+                            <form>
+                                <div class="mb-4">
+                                    <label for="card-number" class="form-label">Número do cartão</label>
+                                    <input type="text" class="form-control" id="card-number" placeholder="0000 0000 0000 0000">
+                                </div>
+                                <div class="mb-4">
+                                    <label for="card-holder" class="form-label">Nome do titular</label>
+                                    <input type="text" class="form-control" id="card-holder" placeholder="Nome como está no cartão">
+                                </div>
+                                <div class="row">
+                                    <div class="col-md-6">
+                                        <label for="expiry-date" class="form-label">Validade</label>
+                                        <input type="text" class="form-control" id="expiry-date" placeholder="MM/AA">
+                                    </div>
+                                    <div class="col-md-6">
+                                        <label for="cvv" class="form-label">CVV</label>
+                                        <input type="text" class="form-control" id="cvv" placeholder="123">
+                                    </div>
+                                </div>
+                                <div class="mb-4 mt-4">
+                                    <label for="payment-type" class="form-label">Tipo de pagamento</label>
+                                    <select class="form-select" id="payment-type" required>
+                                        <option value="debito">Débito</option>
+                                        <option value="credito">Crédito</option>
+                                    </select>
+                                </div>
+                                <div class="mb-4" id="installments" style="display: none;">
+                                    <label for="installment-options" class="form-label">Parcelamento</label>
+                                    <select class="form-select" id="installment-options" required>
+                                        <option value="1">1x sem juros</option>
+                                        <option value="2">2x sem juros</option>
+                                        <option value="3">3x sem juros</option>
+                                        <option value="4">4x sem juros</option>
+                                        <option value="5">5x sem juros</option>
+                                    </select>
+                                </div>
+                                <a href="/" class="btn btn-success mt-3">Realizar pagamento</a>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
         
         <!-- Rodapé  -->
