--- a/views/index.ejs
+++ b/views/index.ejs
@@ -105,38 +105,44 @@
 
             <!-- Seções de resultado de pesquisa -->
             <% if (eventsSearch) { %>
-                <section class="event-section py-1">
+                <section class="event-section search-section py-1">
                     <div class="container">
-                        <!-- Título da seção -->
-                        <div class="text-center mb-4">
-                            <h2 class="section-title">Resultado da busca</h2>
-                        </div>
-                        <!-- Cards de eventos -->
-                        <div class="row">
-                            <% eventsSearch.forEach(event => { %>
-                                <div class="col-md-4 mb-4">
-                                    <% if (event.active) { %>
-                                        <a href="<%= event.link %>" class="event-card">
-                                    <% } else { %>
-                                        <a class="event-card">
-                                    <% } %>
-                                            <div class="card h-80">
-                                                <img src="<%= event.image %>" class="card-img-top" alt="<%= event.name %>">
-                                                <div class="card-body">
-                                                    <h5 class="card-title"><%= event.name %></h5>
-                                                    <p class="card-text"><%= event.description %></p>
-                                                    <% if (event.active) { %>
-                                                        <a href="<%= event.link %>" class="btn btn-shop" id="btn-card-shop">Comprar</a>
-                                                    <% } %>
+                        <% if (eventsSearch.length > 0) { %>
+                            <!-- Título da seção -->
+                            <div class="text-center mb-4">
+                                <h2 class="section-title">Resultado da busca</h2>
+                            </div>
+                            <!-- Cards de eventos -->
+                            <div class="row">
+                                <% eventsSearch.forEach(event => { %>
+                                    <div class="col-md-4 mb-4">
+                                        <% if (event.active) { %>
+                                            <a href="<%= event.link %>" class="event-card">
+                                        <% } else { %>
+                                            <a class="event-card">
+                                        <% } %>
+                                                <div class="card h-80">
+                                                    <img src="<%= event.image %>" class="card-img-top" alt="<%= event.name %>">
+                                                    <div class="card-body">
+                                                        <h5 class="card-title"><%= event.name %></h5>
+                                                        <p class="card-text"><%= event.description %></p>
+                                                        <% if (event.active) { %>
+                                                            <a href="<%= event.link %>" class="btn btn-shop" id="btn-card-shop">Comprar</a>
+                                                        <% } %>
+                                                    </div>
                                                 </div>
-                                            </div>
-                                        </a>
-                                </div>
-                            <% }); %>
-                        </div>
+                                            </a>
+                                    </div>
+                                <% }); %>
+                            </div>
+                        <% } else { %>
+                            <div class="text-center mb-4">
+                                <h2 class="section-title">Não foram encontrados resultados.</h2>
+                            </div>
+                        <% } %>
                     </div>
                 </section>
-            <% }; %>
+            <% } %>
 
         <!-- Rodapé  -->
         <footer id="footer">
