--- a/views/orders.ejs
+++ b/views/orders.ejs
@@ -23,7 +23,7 @@
         <!-- Conteúdo da página -->
         <div class="content flex-grow-1" id="content">
             <!-- Barra de pesquisa -->
-            <%- include('components/search-bar') %>
+            <%- include('components/search-bar', { actionUrl: '/meus-pedidos' }) %>
 
             <div class="container">
                 <!-- Filtro -->
