--- a/views/components/search-bar.ejs
+++ b/views/components/search-bar.ejs
@@ -5,7 +5,7 @@
 
 <body>
     <nav class="navbar navbar-light">
-        <form action="/" method="POST" class="form-inline">
+        <form action="<%= actionUrl %>" method="POST" class="form-inline">
             <input class="form-control mr-sm-2" type="search" name="searchQuery" placeholder="Pesquisar artista ou evento">
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
                 Pesquisar
