tela de conclusão da compra feita

--- a/views/events/payment.ejs
+++ b/views/events/payment.ejs
@@ -42,7 +42,7 @@
                                     <strong><br>2. Clique na área Pix e escaneie o Qr-Code acima</strong>
                                     <strong><br>3. Realize o pagamento e, em seguida, clique no botão abaixo</strong>
                                 </p>
-                                <button class="btn btn-success mt-2">Já paguei</button>
+                                <a href="pagamento/conclusao" class="btn btn-success mt-2">Já paguei</a>
                             </div>
                         </div>
                     </div>
@@ -89,7 +89,7 @@
                                         <option value="5">5x sem juros</option>
                                     </select>
                                 </div>
-                                <a href="/" class="btn btn-success mt-3">Realizar pagamento</a>
+                                <a href="pagamento/conclusao" class="btn btn-success mt-3">Realizar pagamento</a>
                             </form>
                         </div>
                     </div>
