--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -204,3 +204,12 @@
 .search-section {
     margin-top: 20px;
 }
+
+.no-results-message {
+    text-align: center;
+    font-size: 1.5rem;
+    font-weight: bold;
+    color: #888;
+    padding: 20px;
+    border-radius: 10px;
+}
