--- a/views/admin/events.ejs
+++ b/views/admin/events.ejs
@@ -35,20 +35,26 @@
                     </div>
                     <!-- Cards de eventos -->
                     <div class="row">
-                        <% events.forEach(event => { %>
-                            <div class="col-md-4 mb-4">
-                                <a href="<%= event.link %>" class="event-card">
-                                    <div class="card h-80">
-                                        <img src="<%= event.image %>" class="card-img-top" alt="<%= event.name %>">
-                                        <div class="card-body">
-                                            <h5 class="card-title"><%= event.name %></h5>
-                                            <p class="card-text"><%= event.description %></p>
-                                            <a href="<%= event.link %>" class="btn btn-shop" id="btn-card-shop">Editar</a>
+                        <% if (events.length > 0) { %>
+                            <% events.forEach(event => { %>
+                                <div class="col-md-4 mb-4">
+                                    <a href="<%= event.link %>" class="event-card">
+                                        <div class="card h-80">
+                                            <img src="<%= event.image %>" class="card-img-top" alt="<%= event.name %>">
+                                            <div class="card-body">
+                                                <h5 class="card-title"><%= event.name %></h5>
+                                                <p class="card-text"><%= event.description %></p>
+                                                <a href="<%= event.link %>" class="btn btn-shop" id="btn-card-shop">Editar</a>
+                                            </div>
                                         </div>
-                                    </div>
-                                </a>
+                                    </a>
+                                </div>
+                            <% }); %>
+                        <% } else { %>
+                            <div class="no-results-message">
+                                Nenhum evento encontrado.
                             </div>
-                        <% }); %>
+                        <% } %>
                     </div>
                 </div>
             </section>
